Resolves: fdo#33090 better glyph fallback under windows for complex text